feat: change landing page

--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -23,163 +23,161 @@
   </div>
 </div> -->
 
-<template-header></template-header>
-
-<div class="main gradient-gold" id="top">
-  <div class="container">
-    <div class="corpus row">
-      <div class="col-sm-7">
-        <p class="big">
-          Search your friends skilful buddies
-        </p>
-        <p class="text-justify">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        </p>
-        <p>
-          <a [routerLink]="['/sign-up']" class="btn btn-success">
-            Join the community
-          </a>
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="main about" id="about">
-  <div class="container">
-    <h1>How it works</h1>
-    <div class="row justify-content-center">
-      <ul class="col-sm-8">
-        <li>
-          Sign up with your favourite social network account
-        </li>
-        <li>
-          Get access to your friends buddies
-        </li>
-        <li>
-          Connect with these buddies
-        </li>
-        <li>
-          Grow your network by linking your social network accounts
-        </li>
-        <li>
-          Trade with your friends buddies
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
-
-<div class="main pricing" id="pricing">
-  <div class="pricing-header">
-  </div>
-  <div class="container">
-    <h1>Pricing</h1>
-    <div class="row table">
-      <div class="col-sm-4">
-        <div class="bordered">
-          <h4>User</h4>
-          <p class="price">free forever</p>
-          <hr class="hr" />
-          <p class="sub">
-            <span class="limit">For all</span>
+<template-header [fixed]="true">
+  <div class="main gradient-gold" id="top">
+    <div class="container">
+      <div class="corpus row">
+        <div class="col-sm-7">
+          <p class="big">
+            Search your friends skilful buddies
           </p>
-          <ul>
-            <li>
-              Search skilful buddies
-            </li>
-            <li>
-              Connect with people
-            </li>
-            <li>
-              <b>trade</b> with your friends buddies
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="bordered blue">
-          <h4>Local shop</h4>
-          <p class="price">from $ 0,1 per ad</p>
-          <hr class="hr" />
-          <p class="sub">
-            <span class="limit">Advertise your trade</span>
+          <p class="text-justify">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           </p>
-          <ul>
-            <li>
-              Promote your trade
-            </li>
-            <li>
-              Get a higher visbility
-            </li>
-            <li>
-              Appear in <b>local</b> searches
-            </li>
-            <li>
-              Hassle free
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="bordered gold">
-          <h4>Company</h4>
-          <p class="price">from $ 29,- per month</p>
-          <hr class="hr" />
-          <p class="sub">
-            <span class="limit">Reach everybody</span>
+          <p>
+            <a [routerLink]="['/sign-up']" class="btn btn-success">
+              Join the community
+            </a>
           </p>
-          <ul>
-            <li>
-              <b>Full</b> trade pages
-            </li>
-            <li>
-              Reach <b>globally</b>
-            </li>
-            <li>
-              Top most <b>visibility</b>
-            </li>
-            <li>
-              Add your trades with our <b>API</b>
-            </li>
-            <li>
-              Hassle free
-            </li>
-          </ul>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<div class="footer">
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <p>
-          <i class="fa fa-envelope" aria-hidden="true"></i>
-          Questions?
-          <a href="mailto:pierre@anthillsolutions.ch">pierre@anthillsolutions.ch</a>
-        </p>
-      </div>
-      <div class="col-sm-2">
-        <p class="text-center">
-          <a href="#" target="_blank">
-            <i class="fa fa-fw fa-facebook" aria-hidden="true"></i>
-          </a>
-          <a href="https://twitter.com/SkilfulBuddies" target="_blank">
-            <i class="fa fa-fw fa-twitter" aria-hidden="true"></i>
-          </a>
-          <a href="https://www.producthunt.com/upcoming/skilful-buddies" target="_blank">
-            <i class="fa fa-fw fa-product-hunt" aria-hidden="true"></i>
-          </a>
-        </p>
-      </div>
-      <div class="col">
-        <p class="text-right">
-          Copyright © 2017 skilful buddies
-        </p>
+  <div class="main about" id="about">
+    <div class="container">
+      <h1>How it works</h1>
+      <div class="row justify-content-center">
+        <ul class="col-sm-8">
+          <li>
+            Sign up with your favourite social network account
+          </li>
+          <li>
+            Get access to your friends buddies
+          </li>
+          <li>
+            Connect with these buddies
+          </li>
+          <li>
+            Grow your network by linking your social network accounts
+          </li>
+          <li>
+            Trade with your friends buddies
+          </li>
+        </ul>
       </div>
     </div>
   </div>
-</div>
+
+  <div class="main pricing" id="pricing">
+    <div class="container">
+      <h1>Pricing</h1>
+      <div class="row table">
+        <div class="col-sm-4">
+          <div class="bordered">
+            <h4>User</h4>
+            <p class="price">free forever</p>
+            <hr class="hr" />
+            <p class="sub">
+              <span class="limit">For all</span>
+            </p>
+            <ul>
+              <li>
+                Search skilful buddies
+              </li>
+              <li>
+                Connect with people
+              </li>
+              <li>
+                <b>trade</b> with your friends buddies
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="bordered blue">
+            <h4>Local shop</h4>
+            <p class="price">from $ 0,1 per ad</p>
+            <hr class="hr" />
+            <p class="sub">
+              <span class="limit">Advertise your trade</span>
+            </p>
+            <ul>
+              <li>
+                Promote your trade
+              </li>
+              <li>
+                Get a higher visbility
+              </li>
+              <li>
+                Appear in <b>local</b> searches
+              </li>
+              <li>
+                Hassle free
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="bordered gold">
+            <h4>Company</h4>
+            <p class="price">from $ 29,- per month</p>
+            <hr class="hr" />
+            <p class="sub">
+              <span class="limit">Reach everybody</span>
+            </p>
+            <ul>
+              <li>
+                <b>Full</b> trade pages
+              </li>
+              <li>
+                Reach <b>globally</b>
+              </li>
+              <li>
+                Top most <b>visibility</b>
+              </li>
+              <li>
+                Add your trades with our <b>API</b>
+              </li>
+              <li>
+                Hassle free
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <p>
+            <i class="fa fa-envelope" aria-hidden="true"></i>
+            Questions?
+            <a href="mailto:pierre@anthillsolutions.ch">pierre@anthillsolutions.ch</a>
+          </p>
+        </div>
+        <div class="col-sm-2">
+          <p class="text-center">
+            <a href="#" target="_blank">
+              <i class="fa fa-fw fa-facebook" aria-hidden="true"></i>
+            </a>
+            <a href="https://twitter.com/SkilfulBuddies" target="_blank">
+              <i class="fa fa-fw fa-twitter" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.producthunt.com/upcoming/skilful-buddies" target="_blank">
+              <i class="fa fa-fw fa-product-hunt" aria-hidden="true"></i>
+            </a>
+          </p>
+        </div>
+        <div class="col">
+          <p class="text-right">
+            Copyright © 2017 skilful buddies
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</template-header>
