--- a/src/app/templates/header/header.component.scss
+++ b/src/app/templates/header/header.component.scss
@@ -83,6 +83,12 @@ header {
   }
 }
 
+.header-fixed {
+  position: fixed;
+  width: 100vw;
+  z-index: 10;
+}
+
 .wrapper {
   min-height: 100vh;
   @include grey;
