refactor: change search, connect, trade style

--- a/src/app/pages/connect/connect.component.html
+++ b/src/app/pages/connect/connect.component.html
@@ -1,6 +1,4 @@
-<div class="above">
-  <template-header [active]="'connect'"></template-header>
-
+<template-header [active]="'connect'">
   <div class="container">
     <form class="search" [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
       <div class="form-row align-items-center justify-content-center">
@@ -31,5 +29,4 @@
       </p>
     </div>
   </div>
-
-</div>
+</template-header>
