--- a/src/app/pages/trade/trade.component.html
+++ b/src/app/pages/trade/trade.component.html
@@ -1,6 +1,4 @@
-<div class="above">
-  <template-header [active]="'trade'"></template-header>
-
+<template-header [active]="'trade'">
   <div class="container">
     <form class="search" [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
       <div class="form-row align-items-center justify-content-center">
@@ -32,5 +30,4 @@
         class="col-sm-10 my-1"></template-card-result>
     </div>
   </div>
-
-</div>
+</template-header>
