--- a/src/app/templates/card-skill/card-skill.component.html
+++ b/src/app/templates/card-skill/card-skill.component.html
@@ -11,6 +11,9 @@
         <a [routerLink]="['']">IT</a>
       </span>
     </p>
+    <p>
+      <button (click)="edit()">Edith</button>
+    </p>
   </div>
   <div class="content">
     <markdown [data]="skill.content"></markdown>
