--- a/src/app/templates/card-skill/card-skill.component.html
+++ b/src/app/templates/card-skill/card-skill.component.html
@@ -1,5 +1,5 @@
 <div class="profile-card">
-  <div class="header">
+  <div class="profile-card-header">
     <h2 class="text-center">{{skill.name}}</h2>
     <p class="text-center">
       <span class="p-3">
@@ -11,8 +11,10 @@
         <a [routerLink]="['']">IT</a>
       </span>
     </p>
-    <p>
-      <button (click)="edit()">Edith</button>
+    <p class="edition" *ngIf="editable">
+      <button class="btn btn-link pointer" (click)="edit()">
+        <i class="fa fa-fw fa-pencil" aria-hidden="true"></i>
+      </button>
     </p>
   </div>
   <div class="content">
