--- a/src/app/templates/card-skill/card-skill.component.scss
+++ b/src/app/templates/card-skill/card-skill.component.scss
@@ -6,26 +6,32 @@
     position: relative;
     height: 120px;
     width: 100%;
-    background-color: silver;
-    background-image:
-      radial-gradient(ellipse at center, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%),
-      url('/assets/img/developer.jpg');
+    background-color: grey;
+    // background-image:
+    //   radial-gradient(ellipse at center, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%),
+    //   url('/assets/img/developer.jpg');
     background-size: cover;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     color: white;
     text-shadow: 0 0 8px rgba(0,0,0,0.4);
-    h2 {
-      font-size: 1.4em;
-      padding-top: 40px;
-    }
-    p {
-      color: rgb(240,240,240);
-      a {
-        color: rgb(240,240,240);
+    .shadow {
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+      background-image: radial-gradient(ellipse at center, rgba(50,50,50,0) 0%,rgba(50,50,50,0.4) 100%);
+      height: 100%;
+      h2 {
+        font-size: 1.4em;
+        padding-top: 40px;
       }
-      a:hover {
-        color: orangered;
+      p {
+        color: rgb(240,240,240);
+        a {
+          color: rgb(240,240,240);
+        }
+        a:hover {
+          color: orangered;
+        }
       }
     }
   }
