--- a/src/app/templates/card-trade/card-trade.component.html
+++ b/src/app/templates/card-trade/card-trade.component.html
@@ -1,21 +1,23 @@
 <div class="profile-card">
-  <div class="header">
-    <h2 class="text-center">{{trade.name}}</h2>
-    <p class="text-center">
-      <span class="p-3">
-        <i class="fa fa-fw fa-users" aria-hidden="true"></i>
-        <a [routerLink]="['']">100</a>
-      </span>
-      <span class="p-3">
-        <i class="fa fa-fw fa-cubes" aria-hidden="true"></i>
-        <a [routerLink]="['']">IT</a>
-      </span>
-    </p>
-    <p class="edition" *ngIf="editable">
-      <button class="btn btn-link pointer" (click)="edit()">
-        <i class="fa fa-fw fa-pencil" aria-hidden="true"></i>
-      </button>
-    </p>
+  <div class="profile-card-header" [style.backgroundColor]="shadow | safeHtml">
+    <div class="shadow">
+      <h2 class="text-center">{{trade.name}}</h2>
+      <p class="text-center">
+        <span class="p-3">
+          <i class="fa fa-fw fa-users" aria-hidden="true"></i>
+          <a [routerLink]="['']">100</a>
+        </span>
+        <span class="p-3">
+          <i class="fa fa-fw fa-cubes" aria-hidden="true"></i>
+          <a [routerLink]="['']">IT</a>
+        </span>
+      </p>
+      <p class="edition" *ngIf="editable">
+        <button class="btn btn-link pointer" (click)="edit()">
+          <i class="fa fa-fw fa-pencil" aria-hidden="true"></i>
+        </button>
+      </p>
+    </div>
   </div>
   <p class="content">
     <markdown [data]="trade.content"></markdown>
